src/objects/Tool_Kit__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <description>Actual End Date of the Tool Kit</description>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>Actual Start Date of the Tool Kit</description>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ad_Banner__c</fullName>
        <description>Banner of the tool kit</description>
        <label>Ad.Banner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Page</fullName>
                </value>
                <value>
                    <fullName>1/2</fullName>
                </value>
                <value>
                    <fullName>1/3</fullName>
                </value>
                <value>
                    <fullName>1/4</fullName>
                </value>
                <value>
                    <fullName>Double Spread</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Color__c</fullName>
        <description>Ad. Color of the tool kit</description>
        <label>Ad. Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black and White</fullName>
                </value>
                <value>
                    <fullName>Colour</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Copy__c</fullName>
        <label>Ad. Copy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ad_Format__c</fullName>
        <description>Ad, Format of the tool kit</description>
        <label>Ad. Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Picture</fullName>
                </value>
                <value>
                    <fullName>PPT</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ad_Size_Height__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Ad. Size Height of the tool kit</description>
        <inlineHelpText>Units (cm)</inlineHelpText>
        <label>Ad. Size Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ad_Size_Width__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Ad. Size Width of the tool kit</description>
        <inlineHelpText>Units (cm)</inlineHelpText>
        <label>Ad. Size Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apply_Status__c</fullName>
        <description>Apply Status of the tool kit</description>
        <label>Apply Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Need Modify</fullName>
                </value>
                <value>
                    <fullName>Tool Kit Finished</fullName>
                </value>
                <value>
                    <fullName>Cancel Application</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ToolKitApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Background__c</fullName>
        <description>Background of the Tool Kit</description>
        <label>Background</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bleed_Banner__c</fullName>
        <label>Bleed Banner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Page (Vertical Layout)</fullName>
                </value>
                <value>
                    <fullName>Half Page (Horiontal Layout)</fullName>
                </value>
                <value>
                    <fullName>Double Spread (Horiontal Layout)</fullName>
                </value>
                <value>
                    <fullName>Front Cover (Vertical Layout)</fullName>
                </value>
                <value>
                    <fullName>Back Cover (Vertical Layout)</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bleed_Size_Height__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Bleed Size Height of the tool kit</description>
        <inlineHelpText>Units(cm)</inlineHelpText>
        <label>Bleed Size Height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bleed_Size_Width__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Bleed Size Width of the tool kit</description>
        <inlineHelpText>Units(cm)</inlineHelpText>
        <label>Bleed Size Width</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MB</fullName>
                </value>
                <value>
                    <fullName>smart</fullName>
                </value>
                <value>
                    <fullName>AMG</fullName>
                </value>
                <value>
                    <fullName>StarElite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of the dealer</description>
        <formula>Dealer_Name__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments of the tool kit</description>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <formula>Dealer_Name__r.Dealer_ND_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dealer Name of the tool kit</description>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tool Kits (Dealer Name)</relationshipLabel>
        <relationshipName>Tool_Kits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Region__c</fullName>
        <label>Dealer Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Sub_Region__c</fullName>
        <label>Dealer Sub Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_Date__c</fullName>
        <description>Deliver Date of the tool kit</description>
        <label>Deliver Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Director__c</fullName>
        <description>Event Director of the Tool Kit</description>
        <label>Event Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Kit_Name__c</fullName>
        <label>Event Kit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Kit_URL__c</fullName>
        <label>Event Kit URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Participant__c</fullName>
        <description>Event Participant of the Tool Kit</description>
        <label>Event Participant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Preview__c</fullName>
        <formula>IMAGE(   view__c , &apos;Event Kit&apos;, 400, 600)</formula>
        <label>Event Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Event Type of the Tool Kit</description>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Road Show</fullName>
                </value>
                <value>
                    <fullName>Test Drive</fullName>
                </value>
                <value>
                    <fullName>Auto Show</fullName>
                </value>
                <value>
                    <fullName>Festival</fullName>
                </value>
                <value>
                    <fullName>New Car Launch</fullName>
                </value>
                <value>
                    <fullName>Joint Event</fullName>
                </value>
                <value>
                    <fullName>Showroom Event</fullName>
                </value>
                <value>
                    <fullName>Sports Marketing</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Prints relevant</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>New Showroom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <formula>HYPERLINK(Event_Kit_URL__c, &apos;Event Kit URL&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Comments__c</fullName>
        <description>Feedback Comments of the tool kit</description>
        <label>Feedback Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Status__c</fullName>
        <description>Feedback Status of the tool kit</description>
        <label>Feedback Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Need Modify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Size__c</fullName>
        <description>Location Size of the Tool Kit</description>
        <label>Location Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location of the Tool Kit</description>
        <label>Location</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indoor</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Showrrom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MIGR_SOURCEID__c</fullName>
        <externalId>true</externalId>
        <label>MIGR SOURCEID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Media_Kit_Name__c</fullName>
        <label>Media Kit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Kit_URL__c</fullName>
        <label>Media Kit URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Media_Name__c</fullName>
        <description>Media Name of the tool kit</description>
        <label>Media Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Preview__c</fullName>
        <formula>IMAGE(  view__c , &apos;Media Kit&apos;, 400, 600)</formula>
        <label>Media Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <description>Media Type of the tool kit</description>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OOH</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_URL__c</fullName>
        <formula>HYPERLINK( Media_Kit_URL__c , &quot;Media Kit URL&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Plan_Start_Date__c</fullName>
        <label>Original Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <description>Date for the tool kit end</description>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Expense__c</fullName>
        <description>Plan Expense of the tool kit</description>
        <label>Plan Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <description>Date for the tool kit start</description>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <description>Purpose of the Tool Kit</description>
        <label>Purpose</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quota__c</fullName>
        <formula>TEXT(
  IF(
    MONTH(TODAY()) &lt; 4,
    1,
    IF(
      MONTH(TODAY()) &lt; 7,
      2,
      IF(
        MONTH(TODAY()) &lt; 10,
        3,
        4
      )
    )
  )
)</formula>
        <label>Quota</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Dealer_Name__r.Dealer_Region__c)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Request of the Tool Kit</description>
        <label>Request</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Showroom__c</fullName>
        <description>Showroom of the tool kit</description>
        <formula>Dealer_Name__r.Branch_name__c</formula>
        <label>Showroom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Date_Quota__c</fullName>
        <formula>TEXT( 
IF( 
MONTH(Submit_Date__c) &lt; 4, 
1, 
IF( 
MONTH(Submit_Date__c) &lt; 7, 
2, 
IF( 
MONTH(Submit_Date__c) &lt; 10, 
3, 
4 
) 
) 
) 
)</formula>
        <label>Submit Date Quota</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <label>Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Today__c</fullName>
        <formula>TEXT(TODAY())</formula>
        <label>Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tool_Kit_Code__c</fullName>
        <displayFormat>T{0}</displayFormat>
        <label>Tool Kit Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Unlock_Feedback_Check__c</fullName>
        <formula>Plan_End_Date__c + 90 &gt;  TODAY()</formula>
        <label>Unlock Feedback Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>External Marketing User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Tool_Kits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>counts__c</fullName>
        <formula>AND( YEAR(Submit_Date__c) = YEAR(TODAY()), Submit_Date_Quota__c = Quota__c )</formula>
        <label>counts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eventdate__c</fullName>
        <formula>Original_Plan_Start_Date__c - TODAY() &gt; 7</formula>
        <label>eventdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mediadate__c</fullName>
        <formula>Original_Plan_Start_Date__c -  TODAY() &gt; 3</formula>
        <label>mediadate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>view__c</fullName>
        <label>view</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tool Kit</label>
    <listViews>
        <fullName>S_M_Retail_Event_Tool_Kit</fullName>
        <columns>NAME</columns>
        <columns>Tool_Kit_Code__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Feedback_Comments__c</columns>
        <columns>Approver__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tool_Kit__c.Event</value>
        </filters>
        <label>Marketing Toolbox</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>S_M_Retail_Media_Tool_Kit</fullName>
        <columns>NAME</columns>
        <columns>Tool_Kit_Code__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Feedback_Comments__c</columns>
        <columns>Approver__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tool_Kit__c.Media</value>
        </filters>
        <label>Advertising Sales Kit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>To_be_modified</fullName>
        <columns>NAME</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Feedback_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apply_Status__c</field>
            <operation>equals</operation>
            <value>Need Modify</value>
        </filters>
        <label>Adjust Toolbox</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>smart_Event_Tool_Kit</fullName>
        <columns>NAME</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Apply_Status__c</columns>
        <columns>Feedback_Status__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>Plan_End_Date__c</columns>
        <columns>Feedback_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tool_Kit__c.smart_Event</value>
        </filters>
        <label>Smart marketing toolbox</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tool Kits</pluralLabel>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Headquarters activities supported by the Toolbox application</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Media</fullName>
        <active>true</active>
        <description>Headquarters support Media Kit request</description>
        <label>Media</label>
    </recordTypes>
    <recordTypes>
        <fullName>smart_Event</fullName>
        <active>true</active>
        <description>Activities of the smart brand Toolbox feedback</description>
        <label>smart Event</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Dealer_Campaign_Share__c</fullName>
        <label>Dealer Campaign Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Third_Party_User_Share__c</fullName>
        <label>Third Party User Share</label>
    </sharingReasons>
    <validationRules>
        <fullName>Actual_End_Date_Later_Than_Start</fullName>
        <active>true</active>
        <description>Actual End Date shall be later than Actual Start Date.</description>
        <errorConditionFormula>AND( 
NOT( ISBLANK( Actual_Start_Date__c ) ) , 
NOT( ISBLANK( Actual_End_Date__c ) ) , 
Actual_End_Date__c &lt; Actual_Start_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>Actual End Date shall be later than Actual Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ad_Size_Height_Must_Larger_Than_0</fullName>
        <active>true</active>
        <description>Ad. Size Height of the tool kit shall be larger than 0.</description>
        <errorConditionFormula>Ad_Size_Height__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Ad_Size_Height__c</errorDisplayField>
        <errorMessage>Ad. Size Height of the tool kit shall be larger than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ad_Size_Width_Must_Larger_Than_0</fullName>
        <active>true</active>
        <description>Ad. Size Width of the tool kit shall be larger than 0.</description>
        <errorConditionFormula>Ad_Size_Width__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Ad_Size_Width__c</errorDisplayField>
        <errorMessage>Ad. Size Width of the tool kit shall be larger than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bleed_Size_Height_Must_Larger_Than_0</fullName>
        <active>true</active>
        <description>Bleed Size Height of the tool kit shall be larger than 0.</description>
        <errorConditionFormula>Bleed_Size_Height__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Bleed_Size_Height__c</errorDisplayField>
        <errorMessage>Bleed Size Height of the tool kit shall be larger than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bleed_Size_Width_Must_Larger_Than_0</fullName>
        <active>true</active>
        <description>Bleed Size Width of the tool kit shall be larger than 0.</description>
        <errorConditionFormula>Bleed_Size_Width__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Bleed_Size_Width__c</errorDisplayField>
        <errorMessage>Bleed Size Width of the tool kit shall be larger than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Plan_End_Date_Later_Than_Start</fullName>
        <active>true</active>
        <description>Plan End Date shall be later than Plan Start Date.</description>
        <errorConditionFormula>AND( 
NOT( ISBLANK( Plan_Start_Date__c ) ) , 
NOT( ISBLANK( Plan_End_Date__c ) ) , 
Plan_End_Date__c &lt; Plan_Start_Date__c 
)</errorConditionFormula>
        <errorDisplayField>Plan_End_Date__c</errorDisplayField>
        <errorMessage>Plan End Date shall be later than Plan Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unlock_Application</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     NOT(
          OR(ISPICKVAL( Apply_Status__c , &apos;Planned&apos;), 
                 ISPICKVAL( Apply_Status__c , &apos;Need Modify&apos;),AND( RecordType.DeveloperName == &apos;smart_Event&apos; ,
                 ISPICKVAL( Apply_Status__c , &apos;Tool Kit Finished&apos;))
                )
             ),
     OR(    ISCHANGED(Brand__c),
            ISCHANGED(Ad_Color__c),
            ISCHANGED(Ad_Copy__c),
            ISCHANGED(Ad_Format__c),
            ISCHANGED(Ad_Size_Height__c),
            ISCHANGED(Ad_Size_Width__c),
            ISCHANGED(Background__c),
            ISCHANGED(Ad_Banner__c),
            ISCHANGED(Bleed_Size_Height__c),
            ISCHANGED(Bleed_Size_Width__c),
            ISCHANGED(Comments__c),
            ISCHANGED(Dealer_Name__c),
            ISCHANGED(Deliver_Date__c),
            ISCHANGED(Event_Director__c),
            ISCHANGED(Event_Kit_Name__c),
            ISCHANGED(Event_Participant__c),
            ISCHANGED(Event_Type__c),
            ISCHANGED(Location__c),
            ISCHANGED(Location_Size__c),
            ISCHANGED(Media_Kit_Name__c),
            ISCHANGED(Media_Name__c),
            ISCHANGED(Media_Type__c),
            ISCHANGED(Plan_End_Date__c),
            ISCHANGED(Plan_Expense__c),
            ISCHANGED(Plan_Start_Date__c),
            ISCHANGED(Purpose__c),
			ISCHANGED(Request__c),
			ISCHANGED(Showroom__c),
            ISCHANGED(Name))
)</errorConditionFormula>
        <errorMessage>You can&apos;t update Tool Kit information with current apply status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Unlock_Application_Feedback</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND( OR(ISPICKVAL( Feedback_Status__c , &apos;Confirmed&apos;),
        ISPICKVAL( Feedback_Status__c , &apos;Approved&apos;)),
     OR(ISCHANGED( Feedback_Comments__c ),  ISCHANGED( Actual_Start_Date__c ) ,ISCHANGED( Actual_End_Date__c ))),
   AND(NOT(ISPICKVAL(  Apply_Status__c , &apos;Tool Kit Finished&apos;)),
   OR(ISCHANGED( Feedback_Comments__c ),ISCHANGED( Actual_Start_Date__c ) ,ISCHANGED( Actual_End_Date__c )))
)</errorConditionFormula>
        <errorDisplayField>Actual_End_Date__c</errorDisplayField>
        <errorMessage>You can&apos;t update Feedback information with current feedback status or apply status.</errorMessage>
    </validationRules>
</CustomObject>